# gov-context

./: .gitignore  README.md  pyproject.toml  setup.cfg
gov_context_llm/: app.py  caption_splitter.py  generate_question_pairs.py  get_rag_chain.py  scrape_and_convert_captions.py  scrape_and_convert_pdf.py  summary_splitter.py  vector_db.py
